# bd2-lab1

./: .clangd  .gitignore  CMakeLists.txt  FixedRecord.hpp  README.md  doc.cpp  main.cpp  read.cpp  students.db
P1/: CMakeLists.txt  FixedRecord.hpp  Student.cpp  Student.hpp  main.cpp  tmp.cpp
P1/include/: FixedRecord.hpp  Student.hpp
P2/: Student.cpp  Student.hpp  VariableRecord.hpp  main.cpp  test.cpp
P3/: main.cpp
